err/dramatis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dramatis'...
Compiling './lib/python3.5/site-packages/dramatis/__init__.py'...
***   File "./lib/python3.5/site-packages/dramatis/__init__.py", line 45
    except AttributeError, error:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dramatis/actor'...
Listing './lib/python3.5/site-packages/dramatis/actor/name'...
Listing './lib/python3.5/site-packages/dramatis/error'...
Compiling './lib/python3.5/site-packages/dramatis/error/__init__.py'...
***   File "./lib/python3.5/site-packages/dramatis/error/__init__.py", line 47
    print "hi" + str(exc_info()[2])
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dramatis/future_value'...
Listing './lib/python3.5/site-packages/dramatis/runtime'...
Listing './lib/python3.5/site-packages/dramatis/runtime/actor'...
Compiling './lib/python3.5/site-packages/dramatis/runtime/actor/actor.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/actor/actor.py", line 41
    behavior = property( lambda(self): self._behavior )
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dramatis/runtime/actor/main.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/actor/main.py", line 14
    print "Traceback (most recent call last):"
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dramatis/runtime/continuation'...
Compiling './lib/python3.5/site-packages/dramatis/runtime/continuation/__init__.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/continuation/__init__.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dramatis/runtime/runtime.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/runtime.py", line 37
    except Exception, e: pass
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dramatis/runtime/scheduler.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/scheduler.py", line 198
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dramatis/runtime/task.py'...
***   File "./lib/python3.5/site-packages/dramatis/runtime/task.py", line 31
    actor = property( lambda(self): self._actor )
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dramatis-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
